[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jaffle_dagster"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
dagster = "~1.5.9"
dagster-cloud = "~1.5.9"
dagster-dbt = "~0.21.9"
dbt-core = "~1.7.2"
dbt-duckdb = "~1.7.0"
pandas = "~2.1.3"
plotly = "~5.18.0"

[tool.poetry.group.dev.dependencies]
dagster-webserver = "~1.5.9"

[tool.dagster]
module_name = "jaffle_dagster"
